2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `shared' space for `merge' arg normalization.

	* merger.c: #include "b-divvy.h".
	(normalize_arg): Rewrite.
	(merge): Update call to `normalize_arg'; don't `tfree'.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `single' space for file(pair)-related allocation.

	* base.h (fremember): Delete func decl.
	(ftalloc): Update.
	(ftnalloc): Delete macro.
	(ffree1): Delete func decl.
	(free_NEXT_str): New func decl.
	* rcsdiff.c (main): Use `ftestalloc'.
	* rcslex.c: #include "b-divvy.h".
	(getkeyopt): Use `free_NEXT_str'.
	(getphrases): Likewise.  Also, use `intern0'.
	* rcssyn.c: Use `free_NEXT_str'.
	* rcsutil.c (alloclist): Delete struct.
	(alloced): Delete pointer to `struct alloclist'.
	(fremember): Delete func.
	(ftestalloc): Use `alloc'.
	(ffree): Use `forget'.
	(ffree1): Delete func.
	(free_NEXT_str): New func.
	(str_save): Use `intern0', into `shared'.
	(fbuf_save): Use `intern0', into `single'.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Allocate `tempname' in `shared'.

	* rcsfnms.c: #include "b-divvy.h".
	(maketemp): Rewrite.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Allocate ISR scratch in `shared'.

	* b-isr.c: #include "b-divvy.h".
	(isr_init): Allocate "isr scratch" in `shared'.
	* b-isr.h (ISR_DISABLE): Don't `tfree' isr scratch.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use spaces for rcsclean `get_directory'.

	* rscclean.c: #include "b-divvy.h".
	(get_directory): Rewrite.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consolidate top-level structs; dynamically allocate in `main'.

	* base.h (behavior): Delete var decl.
	(manifestation, parse_state, repository, flow): Likewise.
	(top): New struct.
	(top): New pointer to `struct top'.
	(BE, MANI, LEX, REPO, FLOW): Update.
	(gnurcs_init): New func decl.
	* b-complain.c (vcomplain): Don't flush if `top' is NULL.
	* rcsutil.c: #include "b-divvy.h".
	(gnurcs_init): New func.